Use factories to make customer accounts